--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ requestAnimationFrame(render);
 
 window.onload=function starttime(){
 
-        time(h1,'1998/4/3');     // 出生年月日
+        time(h1,'2021/8/1');     // 出生年月日
         ptimer = setTimeout(starttime,1000); // 添加计时器
 }
 
@@ -203,7 +203,7 @@ window.onload=function starttime(){
         var hour = parseInt(time/3600)-24*day;    // 小时 60*60 总小时数-过去的小时数=现在的小时数 
         var minute = parseInt(time%3600/60); // 分 -(day*24) 以60秒为一整份 取余 剩下秒数 秒数/60 就是分钟数
         var second = parseInt(time%60);  // 以60秒为一整份 取余 剩下秒数
-        obj.innerHTML="李倩<br>你已经来到这个世界：<br>"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"了<br><span>今日是你的生日，愿所有的快乐、所有的幸福、所有的温馨、所有的好运围绕在你身边。生日快乐！"+"<p>余鑫</p>"
+        obj.innerHTML="李倩<br>我们已经相识：<br>"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"了<br><span>愿你每天快乐、幸福、健康、幸运，永无烦恼！"+"<p>余鑫</p>"
 
         return true;
     }
