--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ h1 p{
 				-webkit-transform:rotateY(0deg) translateZ(400px);
 				-moz-transform:rotateY(0deg) translateZ(400px);
 				-ms-transform:rotateY(0deg) translateZ(400px);
-				background:url(images/01.png);
+				background:url(img/01.png);
 				background-size:cover;
 			}
 		#head div:nth-child(2)
@@ -78,7 +78,7 @@ h1 p{
 				-webkit-transform:rotateY(36deg) translateZ(500px);
 				-moz-transform:rotateY(36deg) translateZ(500px);
 				-ms-transform:rotateY(36deg) translateZ(500px);
-				background:url(images/02.png);
+				background:url(img/02.png);
 				background-size:cover;
 			}
 			
@@ -87,7 +87,7 @@ h1 p{
 				-webkit-transform:rotateY(72deg) translateZ(400px);
 				-moz-transform:rotateY(72deg) translateZ(400px);
 				-ms-transform:rotateY(72deg) translateZ(400px);
-				background:url(images/03.png);
+				background:url(img/03.png);
 				background-size:cover;
 			}
 			
@@ -96,7 +96,7 @@ h1 p{
 				-webkit-transform:rotateY(108deg) translateZ(500px);
 				-moz-transform:rotateY(108deg) translateZ(500px);
 				-ms-transform:rotateY(108deg) translateZ(500px);
-				background:url(images/04.png);
+				background:url(img/04.png);
 				background-size:cover;
 			}
 		#head div:nth-child(5)
@@ -104,7 +104,7 @@ h1 p{
 				-webkit-transform:rotateY(144deg) translateZ(400px);
 				-moz-transform:rotateY(144deg) translateZ(400px);
 				-ms-transform:rotateY(144deg) translateZ(400px);
-				background:url(images/05.png);
+				background:url(img/05.png);
 				background-size:cover;
 			}
 		#head div:nth-child(6)
@@ -112,7 +112,7 @@ h1 p{
 				-webkit-transform:rotateY(180deg) translateZ(500px);
 				-moz-transform:rotateY(180deg) translateZ(500px);
 				-ms-transform:rotateY(180deg) translateZ(500px);
-				background:url(images/06.png);
+				background:url(img/06.png);
 				background-size:cover;
 			}
 		#head div:nth-child(7)
@@ -120,7 +120,7 @@ h1 p{
 				-webkit-transform:rotateY(216deg) translateZ(400px);
 				-moz-transform:rotateY(216deg) translateZ(400px);
 				-ms-transform:rotateY(216deg) translateZ(400px);
-				background:url(images/07.png);
+				background:url(img/07.png);
 				background-size:cover;
 			}
 		#head div:nth-child(8)
@@ -128,7 +128,7 @@ h1 p{
 				-webkit-transform:rotateY(252deg) translateZ(500px);
 				-moz-transform:rotateY(252deg) translateZ(500px);
 				-ms-transform:rotateY(252deg) translateZ(500px);
-				background:url(images/08.png);
+				background:url(img/08.png);
 				background-size:cover;
 			}
 		#head div:nth-child(9)
@@ -136,7 +136,7 @@ h1 p{
 				-webkit-transform:rotateY(288deg) translateZ(400px);
 				-moz-transform:rotateY(288deg) translateZ(400px);
 				-ms-transform:rotateY(288deg) translateZ(400px);
-				background:url(images/09.png);
+				background:url(img/09.png);
 				background-size:cover;
 			}
 		#head div:nth-child(10)
@@ -144,7 +144,7 @@ h1 p{
 				-webkit-transform:rotateY(324deg) translateZ(500px);
 				-moz-transform:rotateY(324deg) translateZ(500px);
 				-ms-transform:rotateY(324deg) translateZ(500px);
-				background:url(images/10.png);
+				background:url(img/10.png);
 				background-size:cover;
 			}
 		@-webkit-keyframes donghua{
