--- a/index.html
+++ b/index.html
@@ -292,13 +292,13 @@ window.onload=function starttime(){
         var hour = parseInt(time/3600)-24*day;    // 小时 60*60 总小时数-过去的小时数=现在的小时数 
         var minute = parseInt(time%3600/60); // 分 -(day*24) 以60秒为一整份 取余 剩下秒数 秒数/60 就是分钟数
         var second = parseInt(time%60);  // 以60秒为一整份 取余 剩下秒数
-        obj.innerHTML="李倩<br>我们已经相识：<br>"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"了<br><span>愿你每天快乐、幸福、健康、幸运，永无烦恼！"+"<p>余鑫</p>"
+        obj.innerHTML="石孟柯<br>我们已经相识：<br>"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"了<br><span>愿你每天快乐、幸福、健康、幸运，永无烦恼！"+"<p>余鑫</p>"
 
         return true;
     }
 </script>
 <audio autoplay="autoplay" loop="loop" preload="auto"
-            src="http://music.163.com/song/media/outer/url?id=1337065812.mp3">       
+            src="music/01.mp3">       
 </audio>	
 	</body>
 </html>
