--- a/index.html
+++ b/index.html
@@ -297,8 +297,10 @@ window.onload=function starttime(){
         return true;
     }
 </script>
-<audio autoplay="autoplay" loop="loop" preload="auto"
-            src="music/01.mp3">       
+<audio controls height="100" width="100" autoplay loop preload id="music">
+  <source src="music/01.mp3" type="audio/mpeg">
+  <source src="music/01.mp3" type="audio/ogg">
+  <embed height="50" width="100" src="music/01.mp3">
 </audio>	
 	</body>
 </html>
