--- a/index.htm
+++ b/index.htm
@@ -188,7 +188,7 @@
 
                 <div class="div_music_tips"></div>
                 <div class="div_btn" id="div_music" onclick="music_switch()"> <!-- 音乐按钮部分 -->
-                   
+                   <img id='img_music' src='./music.png' style='-webkit-animation:music_play_rotate 1s linear infinite'> 
                     <audio id="audio_music" autoplay="autoplay" loop="loop" src="123.mp3">
                         <source type="audio/mpeg">  
                         <!-- 您的浏览器不支持播放音乐 -->
